bloco2/bloco2P/bloco2/my_res/2_04/PrefixCalculator.g4
grammar PrefixCalculator ;
program:
    stat* EOF
    ;
stat:
    expr? NEWLINE
    ;
expr:
    op=('*'|'/'|'+'|'-') expr expr #ExprPrefix
  | Number                         #ExprNumber
    ;
Number: [0-9]+('.'[0-9]+)?;
NEWLINE: '\r'? '\n' ;
WS: [ \t]+ -> skip;
